--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,27 @@
-// Vendor
-// ---------------------------------
-
+// VENDOR
 @import "vendor/normalize";
+
+// @import "vendor/swiper";
+
+//  GLOBAL
+@import "./common/variables";
+@import "./common/global";
+@import "./common/fonts";
+@import "./common/mixins";
+
+//  BLOCKS
+// @import "./blocks/container";
+// @import "./blocks/button";
+@import "./blocks/header";
+@import "./blocks/burger-menu";
+@import "./blocks/page-body";
+
+// @import "./blocks/arrow";
+// @import "./blocks/site-list";
+// @import "./blocks/hero";
+// @import "./blocks/reviews";
+// @import "./blocks/about";
+// @import "./blocks/contacts";
+// @import "./blocks/footer";
+// @import "./blocks/feedback";
+@import "./blocks/overlay";
