Меняет структуру кода и реализует состояние бургерного меню

--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: $color-overlay-slider-hero;
+  background: $color-light-grey;
 }
 
 .overlay.is-active {
