--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,11 +10,9 @@
 @import "./common/mixins";
 
 //  BLOCKS
-// @import "./blocks/container";
-// @import "./blocks/button";
+@import "./blocks/container";
+@import "./blocks/button";
 @import "./blocks/header";
-@import "./blocks/burger-menu";
-@import "./blocks/page-body";
 
 // @import "./blocks/arrow";
 // @import "./blocks/site-list";
