--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,29 +3,145 @@
   justify-content: flex-end;
 }
 
-.header p {
-  color: blue;
-  margin: 0 0 0 15px;
-}
+// .header__menu-title {
+//   font-family: $manrope;
+//   font-size: 14px;
+//   font-weight: 500;
+//   line-height: 14px;
+//   margin: 0;
+//   letter-spacing: 2%;
+//   color: $base-primery;
 
-.header__burger-menu {
-  /*     position: fixed; */
-  position: relative;
+// }
+
+.header__menu-button {
+  position: absolute;
+  // position: relative;
   top: 5px;
   right: 32px;
-  padding: 4px 5px 4px 0;
-  display: flex;
+  padding: 4px 5px 4px 15px;
   width: 136px;
   height: 54px;
-  background: #b8b8d4;
-  border: 2px solid transparent;
+  background: $base-white;
+  border: 1px solid $base-primery;
   border-radius: 40px;
-  justify-content: space-between;
+}
+
+// menu is-active
+// .header__menu-button.is-active {
+//   width: 280px;
+//   background: $base-primery;
+
+//   .header__menu-title {
+//     color: $base-white;
+//   }
+
+//   .header__menu-wrapper {
+//     background: $base-white;
+//   }
+
+//   span {
+//     background-color: $base-primery;
+//   }
+// }
+
+
+.header__menu-wrapper {
+  display: flex;
+  background: $base-primery;
+  border-radius: 50%;
+  height: 46px;
+  width: 46px;
   align-items: center;
+  justify-content: center;
+}
+
+.header__menu {
+  position: relative;
+  width: 40px;
+  height: 22px;
+  background: transparent;
+  box-shadow: none;
+  border: none;
+  outline: 0;
   cursor: pointer;
+  z-index: 10;
+
+  span {
+    position: absolute;
+    left: 50%;
+    width: 18px;
+    height: 1px;
+    background-color: $base-white;
+
+    &:nth-child(1) {
+      @include trans-burger-close;
+      top: 6px;
+    }
+
+    &:nth-child(2) {
+      top: 10px;
+      opacity: 1;
+      transform: translateX(-50%);
+    }
+
+    &:last-child {
+      @include trans-burger-close;
+      top: 14px;
+    }
+  }
+}
+
+.header__menu.open {
+  span {
+    &:nth-child(1) {
+      top: 50%;
+      transform: translateX(-50%) translateY(0) rotate(45deg);
+      transition: top .3s cubic-bezier(0.21, 0.83, 0.26, 0.87),
+        transform .3s cubic-bezier(0.21, 0.83, 0.26, 0.87) .3s;
+    }
+
+    &:nth-child(2) {
+      opacity: 0;
+      display: block;
+    }
+
+    &:last-child {
+      top: 50%;
+      transform: translateX(-50%) translateY(0) rotate(-45deg);
+      transition: bottom .3s cubic-bezier(0.21, 0.83, 0.26, 0.87),
+        transform .3s cubic-bezier(0.21, 0.83, 0.26, 0.87) .3s;
+    }
+  }
+}
+
+.header__nav {
+  position: fixed;
+  // position: absolute;
+  // margin: 10px 30px 0;
+  top: 65px;
+  right: 30px;
+  /*   height: 100vh; */
+  padding: 50px;
+  border-radius: 12px;
+  background-color: $base-primery;
+  transform: translateX(130%);
   transition: all .2s ease-out;
 }
 
-.header__burger-menu.is-active {
-  width: 280px;
+.header__nav-list {
+  list-style-type: none;
+  text-align: right;
+}
+
+.header__nav-item {
+  padding: 12px 0;
+}
+
+.header__nav-link {
+  color: $base-white;
+}
+
+.header__nav.open {
+  transform: translateX(0);
 }
