--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -13,11 +13,11 @@ body {
 }
 
 html {
-  font-family: $montserrat;
+  font-family: $manrope;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-  color: $base-primery;
+  color: $color-text;
 }
 
 body {
@@ -25,6 +25,7 @@ body {
   height: 100%;
   margin: 0 auto;
   min-width: $vp-320;
+  background: $base-bg-main;
 }
 
 img {
@@ -43,6 +44,7 @@ a {
 .disabled {
   pointer-events: none;
   cursor: default;
+  background-color: $color-disabled;
   color: $color-disabled;
 }
 
