--- a/source/sass/common/mixins.scss
+++ b/source/sass/common/mixins.scss
@@ -61,11 +61,19 @@
 }
 
 // transition
-@mixin transition {
-  transition: all 0.2s ease-in-out;
+@mixin trans-burger-close {
+  transform: translateX(-50%) translateY(0);
+  transition: top 0.3s cubic-bezier(0.21, 0.83, 0.26, 0.87) 0.3s,
+    transform 0.3s cubic-bezier(0.21, 0.83, 0.26, 0.87);
 }
 
+// @mixin trans-burger-open {
+//   transition: bottom 0.3s cubic-bezier(0.21, 0.83, 0.26, 0.87),
+//     transform 0.3s cubic-bezier(0.21, 0.83, 0.26, 0.87) 0.3s;
+// }
+
 @mixin disabled {
+
   &:disabled,
   &.is-disabled {
     @content;
