--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -1,41 +1,28 @@
 //  Fonts
-$montserrat: "Montserrat", "Arial", sans-serif;
+$manrope: "Manrope", "Arial", sans-serif;
 
 // Base colors
-$base-primery: #2d383f;
-$base-additional: #0266c1;
-$base-additional-opacity: rgba(2, 102, 193, 0.1);
+$base-primery: #316DC2;
 $base-white: rgb(255, 255, 255);
+$base-bg-main: #F0EFE9;
+$base-additional-opacity: rgba(2, 102, 193, 0.1);
 $base-black: rgb(0, 0, 0);
 
 // Other colors
-$color-disabled: #999999;
-$color-elephant: #657792;
-$color-resolution-blue: rgb(28, 51, 116);
-$color-resolution-blue-10: rgba(28, 51, 116, 0.1);
-$color-transparent: rgba(255, 255, 255, 0);
-$color-torch-red: #ff121f;
-$color-grey: rgba(45, 56, 63, 0.3);
-$color-whisper: #e8e8e8;
+$color-text: #484848;
+$color-error: #FF5E66;
+$color-active: #275699;
+$color-disabled: #A9AFB7;
 $color-bg-ok: #ff9800;
 $color-bg-reddit: #ff5722;
-$color-active: rgb(28, 51, 116);
-
-// Conditions
-$link-disabled-blue: rgb(153, 153, 153);
-$link-active-blue: rgb(28, 51, 116);
-$number-hover-blue: rgba(255, 255, 255, 0.5);
-$btn-links-conditions: rgb(28, 51, 116);
-
 
 // overlay colors
-$bg-color-hero: linear-gradient(175deg, rgb(121 154 188) 49%, rgb(109 80 35) 121%);
-$color-overlay-slider-hero: linear-gradient(143deg, rgba(15, 20, 41, 0.33) 13%, rgba(15, 20, 41, 0) 96%);
-$color-overlay-slider-card: linear-gradient(0deg, rgba(0, 0, 0, 0.6) 22%, rgba(0, 0, 0, 0) 60%);
+$color-grey-blue: rgba(49, 109, 194, 0.2);
+$color-light-grey: rgba(13, 29, 51, 0.4);
 
 // Animation
 $tf-default: ease-in-out;
-$trans-default: 0.2s $tf-default;
+$trans-default:all 0.2s $tf-default;
 $border-width: 2px solid;
 
 // Width-Viewports
