--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -24,6 +24,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  position: relative;
   min-width: $vp-320;
   background: $base-bg-main;
 }
