--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,10 +13,11 @@
 @import "./blocks/container";
 @import "./blocks/button";
 @import "./blocks/header";
+@import "./blocks/hero";
+@import "./blocks/faq";
 
 // @import "./blocks/arrow";
 // @import "./blocks/site-list";
-// @import "./blocks/hero";
 // @import "./blocks/reviews";
 // @import "./blocks/about";
 // @import "./blocks/contacts";
