--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -7,8 +7,26 @@
   align-items: center
 }
 
+.faq-accordion__title {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 20px;
+
+  @include vp-768 {
+    margin: 0 0 26px;
+    font-size: 34px;
+    line-height: 50px;
+  }
+
+  @include vp-1440 {
+    font-size: 50px;
+    line-height: 50px;
+  }
+}
+
 .faq-accordion__list {
   @include list-reset;
+  margin: 0;
   display: flex;
   flex-direction: column;
 }
@@ -17,66 +35,158 @@
   border: 1px solid #e5f3fa;
   border-radius: 10px;
   overflow: hidden;
-
-  // min-height: 84px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  // padding: 22px 17px 22px 17px;
-  margin: 10px 0px;
+  margin: 14px 0 -3px;
   border: 2px solid $base-primery;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
-.faq-accordion__button {
-  background: transparent;
-}
-
-// .faq-accordion__item .is-active {
-//   background: $base-primery;
-// }
 
 .faq-accordion__item .faq-accordion__content {
   padding: 0 25px;
   padding: 0;
-  background: $base-primery;
-
+  background: $base-primery
 }
 
 
+// Closed accordion
 .faq-accordion__button {
   width: 100%;
+  margin: 0;
+  padding: 20px 15px;
+  font-weight: 600;
+  cursor: pointer;
+  position: relative;
+
+  &:hover,
+  &:focus-visible {
+    background-color: $base-white;
+    color: $base-primery;
+
+    .faq-accordion__icon-wrapper {
+      border: 1px solid $base-primery;
+    }
+
+    .faq-accordion__icon-wrapper span {
+      background-color: $base-primery;
+    }
+  }
+
+  &:active {
+    color: $color-active;
+    opacity: 1;
+
+    .faq-accordion__icon-wrapper {
+      background-color: $color-active;
+    }
+
+    .faq-accordion__icon-wrapper span {
+      background-color: $base-white;
+    }
+  }
+
+  @include vp-768 {
+    padding: 30px;
+  }
+
+  @include vp-1440 {}
+}
+
+// Opened button
+.faq-accordion__button.is-active {
+
+  &:hover,
+  &:focus-visible {
+    background-color: $base-primery;
+    color: $base-white;
+
+    .faq-accordion__icon-wrapper {
+      background-color: transparent;
+      border: 1px solid $base-white;
+
+    }
+
+    .faq-accordion__icon-wrapper span {
+      background-color: $base-white;
+    }
+  }
+
+  &:active {
+    opacity: 1;
+    background-color: $color-active;
+    color: $base-white;
+
+    .faq-accordion__icon-wrapper {
+      background-color: $base-white;
+    }
+
+    .faq-accordion__icon-wrapper span {
+      background-color: $base-primery;
+    }
+  }
+}
+
+.faq-accordion__button-text {
+  width: 195px;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
   text-align: left;
-  margin: 0;
-  padding: 20px 25px;
-  font-weight: 600;
-  cursor: pointer;
+
+  br {
+    display: none;
+  }
+
+  @include vp-768 {
+    br {
+      display: block;
+    }
+
+  }
+
+
+  @include vp-768 {
+    width: 560px;
+    font-size: 22px;
+    line-height: 26px;
+  }
+
+  @include vp-1440 {
+    font-size: 28px;
+    line-height: 34px;
+  }
+}
+
+.faq-accordion__icon-wrapper {
   position: relative;
+
+  span {
+    position: absolute;
+    left: 11px;
+    top: 50%;
+    width: 18px;
+    height: 1px;
+    background-color: $base-white;
+
+    &:nth-child(2) {
+      transform: rotate(90deg);
+    }
+  }
 }
 
-.faq-accordion__icon {
-  // content: url('/__spritemap#sprite-plus-view');
-  // background-image: url("/__spritemap#sprite-plus-view");
+.faq-accordion__button.is-active .faq-accordion__icon-wrapper span {
+  left: 11px;
+  top: 50%;
   width: 18px;
-  height: 18px;
-  color: $base-white;
-  transition: 0.3s;
-  display: inline-block;
-  position: absolute;
-  right: 36px;
-  top: 31px;
-  z-index: 1;
-}
-
-.faq-accordion__button.is-active::after {
   transform: rotate(180deg);
+  background-color: $base-primery;
 }
 
-.faq-accordion__button-wrapper {
+
+.faq-accordion__icon-wrapper {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -85,13 +195,11 @@
 .faq-accordion__content,
 .faq-accordion__button.is-active {
   transition: $trans-default;
-
   background: $base-primery;
   color: $base-white;
 }
 
 .faq-accordion__item .faq-accordion__content {
-  padding: 0 25px;
   max-height: 0;
   transition: 0.3s;
   overflow: hidden;
@@ -102,4 +210,16 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
+  padding: 0 15px 20px;
+
+  @include vp-768 {
+    font-size: 16px;
+    line-height: 20px;
+    padding: 0 30px 20px;
+  }
+
+  @include vp-1440 {
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
