--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -4,7 +4,12 @@
 
   display: flex;
   flex-direction: column;
-  align-items: center
+  align-items: center;
+
+  @include vp-1440 {
+    padding: 0 206px;
+    margin-top: -6px;
+  }
 }
 
 .faq-accordion__title {
@@ -19,6 +24,7 @@
   }
 
   @include vp-1440 {
+    margin: 0 0 57px;
     font-size: 50px;
     line-height: 50px;
   }
@@ -43,7 +49,6 @@
   border: 2px solid $base-primery;
   border-radius: 15px;
 }
-
 
 .faq-accordion__item .faq-accordion__content {
   padding: 0 25px;
@@ -72,6 +77,7 @@
 
     .faq-accordion__icon-wrapper span {
       background-color: $base-primery;
+      left: 10px;
     }
   }
 
@@ -92,10 +98,12 @@
     padding: 30px;
   }
 
-  @include vp-1440 {}
+  @include vp-1440 {
+    padding: 40px;
+  }
 }
 
-// Opened button
+// Opened accordion
 .faq-accordion__button.is-active {
 
   &:hover,
@@ -111,6 +119,7 @@
 
     .faq-accordion__icon-wrapper span {
       background-color: $base-white;
+      left: 10px;
     }
   }
 
@@ -125,6 +134,10 @@
 
     .faq-accordion__icon-wrapper span {
       background-color: $base-primery;
+    }
+
+    +.faq-accordion__content {
+      background-color: $color-active;
     }
   }
 }
@@ -141,22 +154,23 @@
   }
 
   @include vp-768 {
-    br {
-      display: block;
-    }
-
-  }
-
-
-  @include vp-768 {
     width: 560px;
     font-size: 22px;
     line-height: 26px;
+
+    br {
+      display: block;
+    }
   }
 
   @include vp-1440 {
+    width: 800px;
     font-size: 28px;
     line-height: 34px;
+
+    br {
+      display: none;
+    }
   }
 }
 
@@ -190,6 +204,10 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+
+  @include vp-768 {
+    align-self: flex-start;
+  }
 }
 
 .faq-accordion__content,
@@ -197,6 +215,15 @@
   transition: $trans-default;
   background: $base-primery;
   color: $base-white;
+}
+
+.faq-accordion__button.is-active {
+
+  @include vp-768 {
+    padding-bottom: 20px;
+  }
+
+  @include vp-1440 {}
 }
 
 .faq-accordion__item .faq-accordion__content {
@@ -215,11 +242,12 @@
   @include vp-768 {
     font-size: 16px;
     line-height: 20px;
-    padding: 0 30px 20px;
+    padding: 0 30px 30px;
   }
 
   @include vp-1440 {
     font-size: 16px;
     line-height: 26px;
+    padding: 0 40px 40px;
   }
 }
