--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,11 +15,10 @@
 @import "./blocks/header";
 @import "./blocks/hero";
 @import "./blocks/faq";
-
-// @import "./blocks/arrow";
-// @import "./blocks/site-list";
-// @import "./blocks/reviews";
+@import "./blocks/programs";
 // @import "./blocks/about";
+
+// @import "./blocks/reviews";
 // @import "./blocks/contacts";
 // @import "./blocks/footer";
 // @import "./blocks/feedback";
