--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,8 +15,8 @@
 @import "./blocks/header";
 @import "./blocks/hero";
 @import "./blocks/faq";
-@import "./blocks/programs";
-// @import "./blocks/about";
+// @import "./blocks/programs";
+@import "./blocks/about";
 
 // @import "./blocks/reviews";
 // @import "./blocks/contacts";
