--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -5,10 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 50px 15px;
 
   @include vp-1440 {
-    padding: 0 206px;
-    margin-top: -6px;
+    padding: 60px 206px;
+    // margin-top: -6px;
   }
 }
 
@@ -38,22 +39,21 @@
 }
 
 .faq-accordion__item {
-  border: 1px solid #e5f3fa;
-  border-radius: 10px;
+  border-radius: 14px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   margin: 14px 0 -3px;
-  border: 2px solid $base-primery;
-  border-radius: 15px;
+  // border: $border-width $base-primery;
+  // border-radius: 15px;
 }
 
 .faq-accordion__item .faq-accordion__content {
   padding: 0 25px;
   padding: 0;
-  background: $base-primery
+  background: $base-primery;
 }
 
 
@@ -65,6 +65,10 @@
   font-weight: 600;
   cursor: pointer;
   position: relative;
+  border: $border-width $base-primery;
+  border-radius: 15px;
+
+
 
   &:hover,
   &:focus-visible {
@@ -72,26 +76,36 @@
     color: $base-primery;
 
     .faq-accordion__icon-wrapper {
-      border: 1px solid $base-primery;
+      border: $border-width $base-primery;
     }
 
     .faq-accordion__icon-wrapper span {
       background-color: $base-primery;
-      left: 10px;
+      left: 9px;
     }
   }
 
   &:active {
     color: $color-active;
     opacity: 1;
+    border: $border-width $base-primery;
 
     .faq-accordion__icon-wrapper {
       background-color: $color-active;
+      border: $border-width;
     }
 
     .faq-accordion__icon-wrapper span {
       background-color: $base-white;
     }
+
+  }
+
+  &:disabled {
+    border: $border-width $color-disabled;
+    // .faq-accordion__item {
+
+    // }
   }
 
   @include vp-768 {
@@ -105,6 +119,12 @@
 
 // Opened accordion
 .faq-accordion__button.is-active {
+  transition: none;
+  border: 2px solid transparent;
+  /* border-bottom: none; */
+  border-radius: 0px;
+  border-bottom: none;
+
 
   &:hover,
   &:focus-visible {
@@ -127,6 +147,10 @@
     opacity: 1;
     background-color: $color-active;
     color: $base-white;
+    // border: 2px solid transparent;
+    // /* border-bottom: none; */
+    // border-radius: 0px;
+    // transition: none;
 
     .faq-accordion__icon-wrapper {
       background-color: $base-white;
@@ -140,6 +164,14 @@
       background-color: $color-active;
     }
   }
+
+  // .faq-accordion__content p {
+  //   display: block;
+  // }
+}
+
+.faq-accordion__button .faq-accordion__content p {
+  display: block;
 }
 
 .faq-accordion__button-text {
@@ -148,6 +180,7 @@
   font-weight: 400;
   line-height: 18px;
   text-align: left;
+  text-transform: none;
 
   br {
     display: none;
@@ -212,7 +245,7 @@
 
 .faq-accordion__content,
 .faq-accordion__button.is-active {
-  transition: $trans-default;
+  // transition: $trans-default;
   background: $base-primery;
   color: $base-white;
 }
