--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,11 +1,36 @@
-// .hero {
-//   bottom: 75px;
-// }
+.hero {
+  position: relative;
+  min-height: 568px;
+
+  @include vp-768 {
+    min-height: 1024px;
+  }
+
+  @include vp-1440 {
+    min-height: 800px;
+  }
+}
+
+.hero img {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  z-index: -1;
+  background-color: #e6e7e8;
+  // color: rgb(255, 255, 255);
+}
+
 .hero__container {
   padding: 0;
-  position: relative;
-  bottom: 75px;
-  display: block;
+  // position: relative;
+  // bottom: 75px;
+  // display: block;
 }
 
 .hero__container::after {
