--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -12,6 +12,7 @@ $base-black: rgb(0, 0, 0);
 $color-text: #484848;
 $color-overlay: rgba(13, 29, 51, 0.4);
 $color-text-link: #c1d3ed;
+$color-active-bg-blue: #6f99d4;
 $color-error: #ff5e66;
 $color-active: #275699;
 $color-disabled: #a9afb7;
