--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,7 +2,7 @@
   padding: 51px 15px 40px;
 
   @include vp-768 {
-    padding: 50px 45px 0;
+    padding: 50px 45px 51px;
   }
 
   @include vp-1440 {
@@ -94,11 +94,22 @@
   width: 223px;
   padding: 2px 4px 3px 20px;
   height: 44px;
+
+  @include vp-768 {
+    width: 279px;
+    height: 56px;
+    padding-left: 30px;
+    letter-spacing: 1.65px;
+  }
+
+  @include vp-1440 {
+    right: 120px;
+  }
 }
 
 .about__list {
   @include list-reset;
-  margin: 40px 0;
+  margin: 40px 0 0;
   padding: 42px 20px 40px;
   display: flex;
   flex-direction: column;
@@ -113,7 +124,7 @@
     grid-template-rows: 190px;
     padding: 72px 50px 50px 70px;
     gap: 55px 52px;
-    margin: 60px 0;
+    margin: 60px 0 0;
   }
 
   @include vp-1440 {
