--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -22,8 +22,7 @@
   -o-object-fit: cover;
   object-fit: cover;
   z-index: -1;
-  background-color: #e6e7e8;
-  // color: rgb(255, 255, 255);
+  background: $color-dark-blue;
 }
 
 .hero__container {
